--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -26,15 +25,12 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"vite-plugin-node-polyfills": "^0.8.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@imtbl/sdk": "^0.1.7",
-		"@magic-ext/oidc": "^1.0.1",
-		"buffer": "^6.0.3",
-		"process": "^0.11.10",
-		"stream": "^0.0.2",
-		"util": "^0.12.5"
+		"@magic-ext/oidc": "^1.0.1"
 	}
 }
