--- a/package.json
+++ b/package.json
@@ -26,11 +26,18 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vite-plugin-node-polyfills": "^0.8.2"
+		"vite-plugin-node-polyfills": "^0.8.2",
+		"postcss": "^8.4.23",
+		"postcss-load-config": "^4.0.1",
+		"svelte-preprocess": "^5.0.3",
+		"autoprefixer": "^10.4.14",
+		"tailwindcss": "^3.3.1"
 	},
 	"type": "module",
 	"dependencies": {
+		"@imtbl/core-sdk": "^2.0.0",
 		"@imtbl/sdk": "^0.1.7",
-		"@magic-ext/oidc": "^1.0.1"
+		"@magic-ext/oidc": "^1.0.1",
+		"flowbite-svelte": "^0.37.4"
 	}
 }
