--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"postcss": "^8.4.23",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vite-plugin-node-polyfills": "^0.8.2",
-		"postcss": "^8.4.23",
-		"postcss-load-config": "^4.0.1",
-		"svelte-preprocess": "^5.0.3",
-		"autoprefixer": "^10.4.14",
-		"tailwindcss": "^3.3.1"
+		"vite-plugin-node-polyfills": "^0.8.2"
 	},
 	"type": "module",
 	"dependencies": {
